# vkcut

./: CMakeLists.txt  LICENSE
source/: CMakeLists.txt
source/vkcut/: CMakeLists.txt
source/vkcut/app/: CMakeLists.txt  main.cpp
source/vkcut/core/: CMakeLists.txt  base.h  obj_loader.h
source/vkcut/engine/: CMakeLists.txt  engine.cpp  engine.h
source/vkcut/math/: CMakeLists.txt  ray.cpp  ray.h  vec2.h  vec3.h
source/vkcut/renderer/: CMakeLists.txt  camera.h  renderer.h
source/vkcut/scene/: CMakeLists.txt  mesh.h  scene.cpp  scene.h
